Paulin korjaukset valmiiksi. Teoriaosuus pitäisi olla paketissa

--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -123,7 +123,7 @@ The simplest type of black hole is created when an object of mass M becomes smal
 \begin{equation}
 r_S = \frac{2GM}{c^2} \ .
 \end{equation}
-A black hole can be born in nature when massive a star dies and explodes in a supernova. As will be discussed in more detail in section \ref{sect:stellarholes}, massive stars can fuse matter up to iron, and an iron core is formed in the center of the star near the end of its lifetime. Once this core grows massive enough that the degeneracy pressure of electrons can no longer support its gravity, it will undergo catastrophic collapse. If the massive core collapses until it reaches the aforementioned radius, it will form a black hole. The radius is called the Schwarzschild radius, so named after the German astronomer Karl Schwarzschild, who found an exact solution for the Einstein field equations \citep{schwarzschild:1916}. Einstein field equations are the set of 10 equations in Albert Einstein's general theory of relativity that describe the fundamental interaction between spacetime curvature and mass and energy \citep{einstein:1915}. The surface at this radius is called the event horizon. Event horizons are mathematical surfaces, and they do not form any sort of physical barrier. An observer can fall inside the event horizon without any problem. The event horizon simply marks the limit at which not even light can escape the gravitational pull of the black hole.
+A black hole can be born in nature when massive a star dies and explodes in a supernova. As will be discussed in more detail in section \ref{sect:stellarholes}, massive stars can fuse matter up to iron, and an iron core is formed in the center of the star near the end of its lifetime. Once this core is massive enough that the degeneracy pressure of electrons can no longer support its gravity, it will collapse into a neutron star. If the neutron star grows until the degeneracy pressure of neutrons cannot support it, it will collapse until it reaches the aforementioned radius, where it will form a black hole. The radius is called the Schwarzschild radius, so named after the German astronomer Karl Schwarzschild, who found an exact solution for the Einstein field equations \citep{schwarzschild:1916}. Einstein field equations are a set of 10 equations in Albert Einstein's general theory of relativity that describe the fundamental interaction between spacetime curvature and mass and energy \citep{einstein:1915}. The surface at this radius is called the event horizon. Event horizons are mathematical surfaces, and they do not form any sort of physical barrier. An observer can fall inside the event horizon without any problem. The event horizon simply marks the limit at which not even light can escape the gravitational pull of the black hole.
 
 Solutions that do not satisfy the condition given by equation \ref{equ:bhunique} do exist, but these solutions are not stationary, i.e.\ they evolve with time to a Kerr solution. In a stationary field the geometry does not change over time, but it can rotate, e.g. the Kerr solution. As will be discussed soon, these non-stationary solutions are not really physical. This gives an upper limit to the angular momentum that a physical uncharged black hole can have. This limit can be expressed as the specific angular momentum 
 \begin{equation} \label{equ:angularmomentum}
@@ -141,7 +141,7 @@ This would cause what is known as a naked singularity, meaning that a singularit
 
 Astrophysical black holes that appear in nature are assumed to be most likely Kerr black holes. The normal matter that creates and feeds black holes contains roughly equal amounts of protons and electrons, so the overall electric charge is mostly neutral. But stars do spin around themselves, thus possessing angular momentum. Because of the conservation of angular momentum, the stellar remnant will spin around itself as well. Black holes can also gain angular momentum through accreting matter falling into them. Gas coming close to a black hole will form an accretion disk around it. For the matter to be able to reach the black hole and fall into it, it must somehow lose some of its angular momentum. The total angular momentum of the disk must be conserved however, so the momentum has to move outwards in the disk.
 The main source for this is believed to be magneto-rotational instability. The matter in an accretion disk can be considered a magnetized, rotating, and perfectly conducting fluid. In this kind of environment magnetic forces can cause torques on the matter, decreasing the angular momentum of matter closer to the black hole and increasing it in the matter farther away. These instabilities will effectively drive angular momentum outwards in the disk.
-Eventually the matter will fall within the event horizon, conferring its mass and remaining angular momentum to the black hole, speeding up the rotation of the black hole \citep{bhphysics}. Black holes are also capable of losing their angular momentum. One way for this to happen is through the emission of jets.
+Eventually the matter will fall within the event horizon, conferring its mass and remaining angular momentum to the black hole, speeding up the rotation of the black hole \citep{bhphysics}. Black holes are also capable of losing their angular momentum. One way for this to happen is through the emission of jets. Jets are beams of ionized matter that are emitted from near black holes and they can be accelerated close to the speed of light. One suggested method for the formation of jets is through magnetic fields in the accretion disk being dragged and twisted by the spinning black hole.
 
 \subsection{The structure of a rotating black hole}
 
@@ -239,7 +239,7 @@ which tells the lower limit for $M_x$ \citep{casares:2007}. The key factor in th
 
 Intermediate mass black holes are much more elusive compared to both their more massive and lighter companions. We have only very few good candidates and their formation is not fully understood. Learning more about both the birth and evolution of intermediate mass black holes is an important topic, as it allows us to learn more about how lighter black holes gain mass and form supermassive black holes, which in turn is a key element in understanding the formation and evolution of galaxies.
 
-One way for black holes to grow in mass is through the accretion of gas. Matter that accretes onto a black hole forms a disk and must lose its angular momentum before it can end up in the black hole. The matter particles can collide with each other, creating heat and effectively moving the angular momentum outwards, so the inner parts of the disk can fall closer into the black hole. The heat is radiated away, dominantly in the range of X-rays. This process creates radiation pressure that resists more matter falling into the black hole. The radiation increases as more matter accretes onto the hole, and the limit where the outward radiation force and the inward gravitational force are balanced is called the Eddington luminosity or Eddington limit. This limit, assuming spherical accretion, is given by
+One way for black holes to grow in mass is through the accretion of gas. Matter that accretes onto a black hole forms a disk and will eventually fall into the black hole. The matter particles can collide with each other, creating heat. The heat is radiated away, dominantly in the range of X-rays. This process creates radiation pressure that resists more matter falling into the black hole. The radiation increases as more matter accretes onto the hole, and the limit where the outward radiation force and the inward gravitational force are balanced is called the Eddington luminosity or Eddington limit. This limit, assuming spherical accretion, is given by
 \begin{equation}
 L_{Edd} = \frac{4 \pi c G M m_p}{\sigma_T} \simeq 3.2 \times 10^4 \left( \frac{M}{M_\odot} \right) L_\odot \ ,
 \end{equation}
@@ -255,9 +255,10 @@ A so called ``seed'' black hole with a mass around $10^6 M_\odot$ would require 
 \label{fig:imbhs}
 \end{figure}
 
-One way for these kinds of black holes to form could be through massive Population III stars. These stars formed early in the universe and thus they had very low metallicities, since heavy elements had not yet formed. Low metallicity allowed these stars to grow very large. This can be explained with how metallicity affects the cooling of gas clouds. 
-Here the most relevant cooling processes are two-body radiative cooling processes. Free-free emissions happen due to acceleration of electrons when they encounter atomic nuclei. In free-bound emissions an electron recombines with an ion and emits a photon to cool down the gas. Bound-free emission happens when an electron collides with an atom or ion and ionizes it. In bound-bound emissions atoms are excited via collisions, and they emit photons as they decay back to the ground state. Metals have more possible energy states, so more metals means that these processes can happen more often, thus allowing for more efficient cooling.
-Jeans mass gives the limit for the size of a symmetrical, non-rotating gas cloud before it will collapse under its own gravity. The limit comes from when the cloud's thermal energy and gravitational potential are in equilibrium. The mass can be calculated by
+One way for these kinds of black holes to form could be through massive Population III stars. These stars formed early in the universe and thus they had very low metallicities since heavy elements had not yet formed. Low metallicity allowed these stars to grow very large, which can be explained with how metallicity affects the cooling of gas clouds. 
+The most relevant cooling processes in this case are two-body radiative cooling processes. At temperatures of over $10^6$ Kelvin where the matter is almost completely ionized, the most significant process is bremsstrahlung or breaking radiation, where emissions happen due to acceleration of electrons when they encounter atomic nuclei. At lower temperatures other processes come into play as well. In recombination an electron recombines with an ion to emit a photon. In collisional ionization an electron collides with an atom or ion and ionizes it, removing from the gas an amount of kinetic energy equal to the ionization threshold. And finally in collisional excitation atoms are excited via collisions, and they emit photons as they decay back to the ground state. Metals have more possible energy states, so more metals means that these processes can happen more often, thus allowing for more efficient cooling. Conversely if there are little to no metals, these processes happen more slowly.
+
+As stars form from collapsing gas clouds, the mass of the cloud also determines the maximum mass of the star. Jeans mass gives the limit for the size of a symmetrical, non-rotating gas cloud before it will collapse under its own gravity. The limit comes from when the cloud's thermal energy and gravitational potential are in equilibrium. The mass can be calculated by
 \begin{equation}
 M_J = \left( \frac{5 k T}{G \mu m} \right)^{3/2} \left( \frac{3}{4 \pi \rho} \right)^{1/2} \ ,
 \end{equation}
@@ -765,7 +766,7 @@ An intuitive way of understanding the process is to think of a body of mass $M$ 
 
 \cite{chandrasekhar:1943} derived a formula for the resulting force on the subject body by this effect. This force is expressed as
 \begin{equation}
-\mathbf{F}_{\mathrm{df}} = M \frac{\mathrm{d} \mathbf{v}_M}{\mathrm{d} t} = -16 \pi^2 G^2 M^2 m_a \mathrm{ln} \Lambda \left[ \int_0^{v_M} f(v_m) v_m^2 \mathrm{d}v_m \right] \frac{\mathbf{v}_M}{v_M^3} \label{equ:dynamicalfriction}
+\mathbf{F}_{\mathrm{df}} = M \frac{\mathrm{d} \mathbf{v}_M}{\mathrm{d} t} = -16 \pi^2 G^2 M^2 m_a \mathrm{ln} \Lambda \left[ \int_0^{v_M} v_m^2 f(v_m) \mathrm{d}v_m \right] \frac{\mathbf{v}_M}{v_M^3} \label{equ:dynamicalfriction}
 \end{equation}
 and is called Chandrasekhar's dynamical friction formula. Here $f(v_m)$ is the distribution function of the field particles. A distribution function gives the number of particles per phase space volume having approximately the specified velocity near a certain position. Chandrasekhar's formula assumes that the field stars have an isotropic velocity distribution, and thus position does not affect the distribution function. The function is normalized so that integrating it over all the velocities gives the number density of particles near the subject body. The dynamical drag force always opposes the motion of the subject body, similarly to ordinary frictional drag.
 
@@ -787,7 +788,7 @@ If the subject mass moves slowly, so that we can assume that $v_M$ is small, the
 \begin{equation}
 \mathbf{F}_{\mathrm{df}} = -\frac{16 \pi^2}{3} G^2 M^2 m_a \, \mathrm{ln} \Lambda \, f(0) \mathbf{v}_M \ . \label{equ:dynfricslow}
 \end{equation}
-Very interestingly, if instead the subject body moves at a high velocity, so that $v_M \gg v_m$, this behaviour changes. We can assume that the subject body moves at a higher velocity than all the surrounding field particles, so we are effectively integrating over all the velocities of the field particles. As it was mentioned earlier, the distribution function is normalized to give the number density of particles near the subject body. So the integral gives us the number density of particles $n$ over the solid angle of a sphere, $4\pi$. So from the equation \ref{equ:dynamicalfriction} we get
+Very interestingly, if instead the subject body moves at a high velocity, so that $v_M \gg v_m$, this behaviour changes. We can assume that the subject body moves at a higher velocity than all the surrounding field particles, so we are effectively integrating over all the velocities of the field particles. If we move $4\pi$ inside the integral, we have $\int_0^{v_M} 4 \pi v_m^2 f(v_m) \mathrm{d}v_m$, where $4 \pi v_m^2$ is a shell in velocity space. Since $v_M$ is large we are integrating over the whole velocity volume, and as it was mentioned earlier the distribution function is normalized to give the number density $n$ of particles near the subject body. So from the equation \ref{equ:dynamicalfriction} we get
 \begin{equation}
 \mathbf{F}_{\mathrm{df}} = -4 \pi G^2 M^2 m_a n \, \mathrm{ln} \Lambda \, \frac{\mathbf{v}_M}{v_M^3} \ . \label{equ:dynfricfast}
 \end{equation}
@@ -795,7 +796,7 @@ Here the mass density $m_a n$ can be replaced with $\rho(< v_M)$, the overall de
 
 From equations \ref{equ:dynfricslow} and \ref{equ:dynfricfast} we can see that unlike with hydrodynamic friction, where the drag always increases as the velocity increases, the situation here is more complicated. At sufficiently slow velocities dynamical friction is relative to the velocity of the subject body, $F_{\mathrm{df}} \propto v_M$. This is similar to ordinary drag where the force increases with velocity. But at larger velocities the frictional force begins to fall off, $F_{\mathrm{df}} \propto v_M^{-2}$. And as the mass density of the field stars can be replaced with the overall density, the force is independent of the individual masses of the field particles, so the formula is also valid for a field with distributed particle masses.
 
-Chandrasekhar's formula makes several unrealistic assumptions when applied to a real astrophysical system. It assumes that all of the particles are point masses, it does not take into account the self-gravity of the wake left by the subject body, and it assumes a homogeneous and infinite distribution of the field particles, meaning that the choice of $b_\mathrm{max}$ and $v_\mathrm{typ}$ are a bit arbitrary in real scenarios. Despite these assumptions, Chandrasekhar's formula gives good approximations for the drag effect on a subject mass travelling in a stellar system. Taking these effects into account leads to an orbital decay time that is roughly twice as long compared to the estimate from Chandrasekhar's formula \citep{weinberg:1989}.
+Chandrasekhar's formula makes several unrealistic assumptions when applied to a real astrophysical system. It assumes that all of the particles are point masses, it does not take into account the self-gravity of the wake left by the subject body, and it assumes a homogeneous and infinite distribution of the field particles, meaning that the choice of $b_\mathrm{max}$ and $v_\mathrm{typ}$ are a bit arbitrary in real scenarios. Despite these assumptions, Chandrasekhar's formula gives good approximations for the drag effect on a supermassive black hole moving through a field of stars. Taking these effects into account leads to an orbital decay time that is roughly twice as long compared to the estimate from Chandrasekhar's formula \citep{weinberg:1989}.
 
 The point mass approximation can be corrected by using the half-mass radius $r_h$, which is the radius of the subject body that contains half of its total mass, in place of $b_{90}$ in equation \ref{equ:coulomblog} \citep{bt-galdyn}. If the closest approach of a field star to the center of the subject body is $\lesssim r_h$, the orbit of the star will be less affected and thus its contribution to the drag force will be smaller than if the subject body was a point mass. Conversely the total drag force is largely unaffected if $r_h \lesssim b_{90}$. Thus using the half-mass radius gives a good estimate for the dynamical friction in case the subject body is not considered to be a point mass.
 
@@ -819,7 +820,7 @@ where $a$ is the semimajor axis of the binary and $M_\bullet$ is the mass of the
 This analysis fails however if the stellar population surrounding the binary is not actually constant. For a star to be able to get close enough to interact strongly with the binary, it has to have angular momentum of $L \lesssim \sqrt{G(M_1 + M_2)a}$, where $M_1$ and $M_2$ are the masses of the black holes, and $a$ is the semimajor axis \citep{bt-galdyn}. The region of stars with low enough angular momentum is called the loss cone. As the stars that interact with the binary are ejected out of the system, the loss cone is slowly drained of stars. If the loss cone is completely emptied, the binary cannot harden any more, and thus its evolution is halted. This is the so called final-parsec problem, and there must be some mechanisms to refill the loss cone if black hole mergers do happen.
 
 One clear candidate for this is two-body relaxations between stars which cause them to end up inside the loss cone \citep{milosavljevic:2003}. In non-spherical galaxies torques could drive gas to the central region of the galaxy, which would also help the hardening process \citep{mayer:2007}.
-Thus the final parsec problem is more problematic in spherical galaxies where the mass inside the loss cone is the smallest, and there are no torques to drive gas inwards. In triaxial and axisymmetric galaxies however the asymmetric perturbations are able to cause stars to end up on centrophilic orbits that would refill the loss cone. If the host of the binary were to undergo another merger while the black holes are in the process of merging, the perturbations caused by this could break the  symmetry of galactic potentials, and efficiently refill the loss cone.
+Thus the final parsec problem is more problematic in spherical galaxies where the mass inside the loss cone is the smallest due to stars not being able to be on as varied orbits as in non-spherical galaxies, and there are no torques to drive gas inwards. In triaxial and axisymmetric galaxies however the asymmetric perturbations are able to cause stars to end up on centrophilic orbits that would refill the loss cone. If the host of the binary were to undergo another merger while the black holes are in the process of merging, the perturbations caused by this could break the  symmetry of galactic potentials, and efficiently refill the loss cone.
 
 N-body simulations of non-spherical systems suggest that the final parsec problem is not as severe as one might think. The problems has been found to not hamper the hardening of binaries in triaxial \citep{berczik:2006} and axisymmetric galaxies \citep{khan:2013}.
 The simulations however are not completely accurate. Approximating a galaxy with $N \gtrsim 10^9$ stars by a model consisting of only around $N \lesssim 10^6$ particles leads to enhanced two-body relaxation timescales. Thus the loss cone is much less depleted than in real galaxies \citep{milosavljevic:2003}. This problem could be alleviated with simulations capable of handling a much larger amount of particles. Simulations with $N \sim 10^7 - 10^8$ particles could reproduce a more realistic, diffusive behaviour of a galaxy.
@@ -833,7 +834,7 @@ t_c \sim -\frac{a}{4\dot{a}} \ .
 
 The longest evolutionary phase for a black hole binary is when the radius of the bound system is below that at which it becomes hard, but still above the radius at which gravitational waves become prominent \citep{begelman:1980}. This is known as the bottleneck radius, and it marks the area where binary black holes are most likely observed. The decay time at this bottleneck radius is uncertain, and depends on both the population of the loss cone and how much gas affects the evolution of the binary \citep{bt-galdyn}. If the coalescence time is very long, over 10 Gyr, we would expect to be able to observe these binaries at the centers of most galaxies. If the timescale is shorter, we could observe the coalescence events happening.
 
-Current observational evidence suggests that long-lived supermassive black hole binaries might be quite rare. No concrete observations of a supermassive black hole binary have been made. This does not mean that they do not exist however. If both of the supermassive black holes of a binary are quasars and they are very close to each other, it is difficult to tell them apart from a singular active galactic nuclei \citep{roedig:2014}. In the future observations made by the LIGO and LISA gravitational wave detectors might give concrete proof of the merging and thus existence of supermassive black hole binaries.
+Current observational evidence suggests that long-lived supermassive black hole binaries might be quite rare. Though there are many implied candidates based on periodic variability, no concrete observations of a supermassive black hole binary have been made. If both of the supermassive black holes of a binary are quasars and they are very close to each other, it is difficult to tell them apart from a singular active galactic nuclei \citep{roedig:2014}. In the future observations made by the LIGO and LISA gravitational wave detectors might give concrete proof of the merging and thus existence of supermassive black hole binaries, and we might be able to even make interferometric direct observations of a binary black hole.
 
 \chapter{AR-CHAIN} \label{chap:ar-chain}
 \section{AR-CHAIN overview}
